tests/NormalTests/paczka1/small_fuzzy/51375427.err
Error in line 3: IiqPLsBz S395 61,9
Error in line 7: IiqPLsBz A125 13,3
